fixed alignment of metadata, refactored down to 1 line (#870)

--- a/app/assets/stylesheets/base/components/index/_list-view.scss
+++ b/app/assets/stylesheets/base/components/index/_list-view.scss
@@ -39,6 +39,7 @@
 
   align-items: baseline;
   align-content: baseline;
+  width: 100%;
 }
 
 .document__list-metadata-key {
